# waifu-nl2tags

./: .gitignore  PUBLISH.md  README.md  _publish.bat  _update.bat  install.ps1  install.sh  make-shortcut.bat  pyproject.toml  run.bat  start.bat
nl2tags/: __init__.py  baseline.py  caption_cards.py  cli.py  collect_civitai.py  gen_teacher.py  illustrious.py  infer.py  keys.py  make_dataset.py  presets.py  prompt_spec.py  serve.py  studio.html  studio.py  synth_data.py  train_qlora.py  webui.html
nl2tags/data/: tag_ontology.json
